--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -37,12 +37,15 @@ $red:	#c0392b;				// Pomegranate
 $gray: #7f8c8d;				// Asbestos
 // Even more colors
 $bc-red: #bc0000;
+$dark-blue: #0e164e;
+$light-blue: #2b73cd;
+$violet: #583dbb;
 
 // Font Colors
 $base-background-color: #fff;
 $base-font-color: $dark-gray;
-$action-color: $blue;
-$highlight-color: tint($action-color, 33%);
+$action-color: $light-blue;
+$highlight-color: shade($action-color, 60%);
 
 // Border
 $base-border-color: $light-gray;
