--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -74,7 +74,7 @@ pre code.hljs {
 	text-align: center;
 	&.has-cover {
 		color: $white;
-		text-shadow: 0 2px 1px rgba(0,0,0,0.67) !important;
+		// text-shadow: 0 2px 1px rgba(0,0,0,0.67) !important;
 		background-position: 50% 50%;
 		background-size: cover;
 		.title {
@@ -100,7 +100,7 @@ pre code.hljs {
 *	Header
 */
 .navigation {
-	box-shadow: 0 2px $highlight-color;
+	box-shadow: 0 1px $highlight-color;
 	padding: 0 1em;
 	margin: 0;
 	/*
