--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,7 +30,7 @@
         {% for social in site.social %}
           {% if social.url != null %}
           <li>
-            <a href="{{ social.url }}" title="{{ social.desc }}">
+            <a href="{{ social.url }}" title="{{ social.desc }}" target="_blank">
               <i class="fa fa-{{ social.icon }}"></i>
               <span class="username">{% if social.username %}{{ social.username }}{% else %}{{ social.name }}{% endif %}</span>
             </a>
@@ -42,7 +42,10 @@
     </div>
 
     <div class="site-signature">
-      <p class="rss-subscribe text"><strong>Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></strong></p>
+      <p class="rss-subscribe text">
+        <strong>Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}" target="_blank">via RSS</a>
+        or <a href="http://feeds.feedburner.com/CodingNights" target="_blank">via FeedBurner</a></strong>
+      </p>
       <p class="text">{{ site.description }}</p>
     </div>
 
