Adjusting Feedburner link.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,7 +44,7 @@
     <div class="site-signature">
       <p class="rss-subscribe text">
         <strong>Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}" target="_blank">via RSS</a>
-        or <a href="http://feeds.feedburner.com/CodingNights" target="_blank">via FeedBurner</a></strong>
+        or <a href="http://feeds.feedburner.com/CodingNights" target="_blank"> FeedBurner</a></strong>
       </p>
       <p class="text">{{ site.description }}</p>
     </div>
