Playing with $highlight-color and $action-color. Adding about me and guest posts page.

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -44,7 +44,7 @@ $mid-gray: #888888;
 // Font Colors
 $base-background-color: #fff;
 $base-font-color: $dark-gray;
-$action-color: $dark-gray;
+$action-color: $light-blue;
 $highlight-color: shade($action-color, 75%);
 
 // Border
