--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -251,6 +251,15 @@ pre code.hljs {
 		margin: auto;
 		width: 90%;
 	}
+
+	img + em {
+		color: $gray;
+		font-size: 0.8em;
+		float: left;
+		width: 100%;
+		text-align: center;
+		padding-bottom: 15px;
+	}
 	/*
 	*	Posts
 	*/
@@ -339,7 +348,7 @@ pre code.hljs {
 			}
 		}
 		.profile {
-			max-width: 320px;
+			max-width: 400px;
 			margin: auto;
 			padding-bottom: 0.5em;
  		}
