Copyright and "Made in" added to footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,12 @@
         {% endif %}
         {% endfor %}
       </ul>
+      <br />
+      <p>
+        <span>Made with <i class="fa fa-heartbeat fa-lg"></i> in {{ site.location }}</span>
+        <br />
+        <span><i class="fa fa-copyright" aria-hidden="true"></i>{{ site.started }}-{{ 'now' | date: '%Y' }} {{ site.title }}</span>
+      </p>
     </div>
 
     <div class="site-contact">
