--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -73,3 +73,19 @@ picture {
   margin: 0;
   max-width: 100%;
 }
+
+blockquote {
+  margin: 0 0 30px 0;
+  border-left: 5px solid $light-blue;
+  padding: 10px 20px 10px 30px;
+  font-style: italic;
+  line-height: 1.5;
+}
+
+blockquote > :first-child {
+  margin-top: 0;
+}
+
+blockquote > :last-child {
+  margin-bottom: 0;
+}
