--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -27,6 +27,7 @@ $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #ddd;
 $white: #fff;
+
 // Flat UI Colors. For more, see http://flatuicolors.com/
 $turquoise: #1abc9c;	// Turqoise
 $green: #27ae60;	  	// Nephritis
@@ -35,11 +36,12 @@ $purple: #8e44ad;			// Wisteria
 $orange: #d35400;			// Pumpkin
 $red:	#c0392b;				// Pomegranate
 $gray: #7f8c8d;				// Asbestos
+
 // Even more colors
 $bc-red: #bc0000;
 $dark-blue: #091773;
 $light-blue: #2b73cd;
-$mid-gray: #888888;
+$light-yellow: #ffffe0;
 
 // Font Colors
 $base-background-color: #fff;
@@ -54,3 +56,9 @@ $base-border: 1px solid $base-border-color;
 // Forms
 $form-box-shadow: inset 0 1px 3px rgba(#000, 0.06);
 $form-box-shadow-focus: $form-box-shadow, 0 0 5px adjust-color($action-color, $lightness: -5%, $alpha: -0.3);
+
+// Syntax Highlighting
+$border: lighten($medium-gray, 2%);
+$light-border: $light-gray;
+$dark-text: $medium-gray;
+$text-highlight: $light-yellow;
