--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -11,6 +11,7 @@
 @import "buttons";
 @import "code";
 @import "forms";
+@import "highlight";
 @import "lists";
 @import "tables";
 @import "typography";
