--- a/_sass/base/_code.scss
+++ b/_sass/base/_code.scss
@@ -23,7 +23,7 @@
 }
 
 pre {
-  padding: 10px;
+  padding: 0 10px 0 10px;
   margin: 0;
   line-height: 23px;
   white-space: pre;
@@ -37,8 +37,8 @@ pre {
   border-right: 1px solid #ddd;
   color: $border;
   user-select: none;
-  padding: 0 5px;
   overflow: hidden;
+  margin-left: -10px;
 }
 
 p code, li code, td code {
