--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,9 +9,11 @@
       <p><strong>Site Map</strong></p>
       <ul class="pages">
         {% for page in site.pages %}
-        {% if page.title and page.main_nav != false %}
-          <li class="nav-link"><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-        {% endif %}
+          {% unless page.layout contains 'archive' %}
+            {% if page.title and page.main_nav != false %}
+              <li class="nav-link"><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+            {% endif %}
+          {% endunless %}
         {% endfor %}
       </ul>
       <br />
