--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,9 +14,11 @@
       <ul id="js-navigation-menu" class="navigation-menu show">
         <li class="nav-link"><a href="{{ site.baseurl }}/">Coding Nights</a></li>
         {% for page in site.pages %}
-          {% if page.title and page.main_nav != false %}
-          <li class="nav-link"><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
-          {% endif %}
+          {% unless page.layout contains 'archive' %}
+            {% if page.title and page.main_nav != false %}
+              <li class="nav-link"><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
+            {% endif %}
+          {% endunless %}
         {% endfor %}
       </ul>
     </nav>
