--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -4,6 +4,21 @@
   <div id="disqus_thread"></div>
   <script type="text/javascript">
     var disqus_shortname = '{{ site.disqus_shortname }}';
+    
+    /**
+     *  Defining configuration variables (Recommended):
+     *  https://disqus.com/admin/universalcode/#configuration-variables
+     */
+
+    var disqus_config = function () {
+        this.page.url = '{{ site.url }}{{ page.url }}';  // the page's canonical URL
+
+        {% if page.disqus_id %}
+            this.page.identifier = '{{ page.disqus_id }}'; // the page's unique identifier
+        {% else %}
+            this.page.identifier = '{{ site.url }}{{ page.url }}'; // the page's unique identifier
+        {% endif %}
+    };
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
