Website logo added.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -119,8 +119,8 @@ ul.default {
     	padding-left: $em-base;
     }
     img {
-      max-height: 2.5em;
-      margin-top: 0.75em;
+			height: 90%; 
+      margin-top: 0.10em;
       padding-right: 1em;
     }
     span {
